--- a/.config/hypr/conf/monitor.conf
+++ b/.config/hypr/conf/monitor.conf
@@ -3,6 +3,7 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
+monitor=,preferred,auto,1
 monitor=desc:Samsung Electric Company Odyssey G80SD H1AK500000,3840x2160@240,0x0,1.5
 
 xwayland {
