--- a/.config/hypr/conf/environment.conf
+++ b/.config/hypr/conf/environment.conf
@@ -9,10 +9,10 @@ env = HYPRCURSOR_SIZE,24
 
 # NVIDIA
 
-env = LIBVA_DRIVER_NAME,nvidia
-env = XDG_SESSION_TYPE,wayland
-env = GBM_BACKEND,nvidia-drm
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+#env = LIBVA_DRIVER_NAME,nvidia
+#env = XDG_SESSION_TYPE,wayland
+#env = GBM_BACKEND,nvidia-drm
+#env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
  cursor {
      no_hardware_cursors = true
