--- a/.config/hypr/conf/input.conf
+++ b/.config/hypr/conf/input.conf
@@ -13,7 +13,7 @@ kb_layout = sk
     follow_mouse = 1
 
     accel_profile = flat
-    sensitivity = -0.2 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0.2 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
         natural_scroll = false
@@ -30,4 +30,8 @@ gestures {
 device {
     name = epic-mouse-v1
     sensitivity = -0.5
+}
+device {
+    name = Touchpad
+    sensitivity = -1
 }
