--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -170,7 +170,7 @@
     },
 
 	"power-profiles-daemon": {
-      		"format": "{icon}",
+      		"format": "{icon} | ",
       		"tooltip-format": "Power profile: {profile}\nDriver: {driver}",
       		"tooltip": true,
       		"format-icons": {
