--- a/.config/hypr/conf/autostart.conf
+++ b/.config/hypr/conf/autostart.conf
@@ -10,9 +10,11 @@
 # exec-once = waybar & hyprpaper & firefox
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = ~/.config/waybar/launch-waybar.sh 
-exec-once = hyprpaper
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once=hyprctl setcursor elementary 24
+# exec-once = hyprpaper
+exec-once = waypaper --restore
+exec-once= dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once= hyprctl setcursor elementary 24
 #exec-once = ~/.config/hypr/gtk.sh
 exec-once = dunst
 exec-once = blueman-applet
+exec-once = nm-applet
