--- a/.config/hypr/conf/keybinds.conf
+++ b/.config/hypr/conf/keybinds.conf
@@ -18,9 +18,11 @@ bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, G, exec, $game-menu
 bind = $mainMod, S, exec, $shutdown-menu
+bind = $mainMod, V, exec, $vpn-menu
+bind = $mainMod, P, exec, $power-menu
 bind = $mainMod SHIFT, S, exec, $screenshot
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod SHIFT, P, pseudo, # dwindle
+bind = $mainMod SHIFT, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -69,3 +71,11 @@ bind = $mainMod, code:68, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bind = $mainMod, code:69, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
 bind = $mainMod, code:67, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bind = $mainMod, code:70, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+
+bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bindel = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindl = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindl = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+
+bindl = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
+bindl = , XF86MonBrightnessUp, exec, brightnessctl set +5%
