--- a/.config/hypr/conf/programs.conf
+++ b/.config/hypr/conf/programs.conf
@@ -10,5 +10,7 @@ $fileManager = thunar
 $browser = firefox
 $menu = rofi -show drun -theme Arc-Dark -icon-theme "Papirus" -show-icons -terminal alacritty -font 'DejaVu Sans Mono 14'
 $game-menu = rofi -show drun -theme Arc-Dark -show combi -icon-theme "Papirus" -show-icons -terminal alacritty -font 'DejaVu Sans Mono 18' -drun-categories Game
+$vpn-menu = ~/.config/hypr/scripts/rofi-vpn
+$power-menu = ~/.config/hypr/scripts/rofi-power
 $shutdown-menu = ~/.config/waybar/scripts/rofi-shutdown
 $screenshot = XDG_CURRENT_DESKTOP=Sway flameshot gui -p ~/Obrázky/'Snímky obrazovky'
