--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,9 +1,9 @@
-preload = /usr/share/wallpapers/custom/0002.jpg
+# preload = /usr/share/wallpapers/custom/0002.jpg
 #if more than one preload is desired then continue to preload other backgrounds
 #preload = /path/to/next_image.png
  
 #set the default wallpaper(s) seen on initial workspace(s) --depending on the number of monitors used
-wallpaper = ,/usr/share/wallpapers/custom/0002.jpg
+# wallpaper = ,/usr/share/wallpapers/custom/0002.jpg
 #if more than one monitor in use, can load a 2nd image
 #wallpaper = monitor2,/path/to/next_image.png
  
