Added monitor settings

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -15,6 +15,7 @@
 ################
 
 source = ~/.config/hypr/conf/monitor.conf
+# source = ~/.config/hypr/monitors.conf
 
 ###################
 ### MY PROGRAMS ###
