--- a/.config/hypr/conf/monitor.conf
+++ b/.config/hypr/conf/monitor.conf
@@ -3,8 +3,10 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
+monitor=desc:Samsung Electric Company Odyssey G80SD H1AK500000,3840x2160@120,0x0,1.5,vrr,0
+monitor=desc:HP Inc. HP E243m 3CQ7372XT3,1920x1080@60,2560x-480,1,transform,3
+
 monitor=,preferred,auto,1
-monitor=desc:Samsung Electric Company Odyssey G80SD H1AK500000,3840x2160@120,0x0,1.5
 
 xwayland {
   force_zero_scaling = true
