--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -3,7 +3,7 @@ color_scheme_path=/usr/share/qt5ct/colors/darker.conf
 custom_palette=true
 icon_theme=Papirus-Dark
 standard_dialogs=default
-style=Breeze
+style=kvantum
 
 [Fonts]
 fixed="DejaVu LGC Sans,12,-1,5,50,0,0,0,0,0"
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x13\0\0\a\x7f\0\0\x4\x37\0\0\0\0\0\0\0\x13\0\0\a\x7f\0\0\x4\x37\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\x13\0\0\a\x7f\0\0\x4\x37)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\xb3\0\0\x4\x13\0\0\0\0\0\0\0\0\0\0\x3\xbf\0\0\x4\x1f\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\x3\xb3\0\0\x4\x13)
 
 [Troubleshooting]
 force_raster_widgets=1
