Changes to keybinds and added zive.sk in newsboat

--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -50,14 +50,14 @@ q quit-watch-later                      # exit and remember the playback positio
 ESC set fullscreen no                   # leave fullscreen
 SPACE cycle pause                       # toggle pause/playback mode
 i script-binding stats/display-stats-toggle # toggle displaying information and statistics
-` script-binding console/enable         # open the console
+; script-binding console/enable         # open the console
 Shift+g add sub-scale +0.1              # increase the subtitle font size
 Shift+f add sub-scale -0.1              # decrease the subtitle font size
 m cycle mute                            # toggle mute
-j cycle sub                             # switch subtitle track
-J cycle sub down                        # switch subtitle track backwards
+v cycle sub                             # switch subtitle track
+V cycle sub down                        # switch subtitle track backwards
 a cycle audio                           # switch audio track
-v cycle video                           # switch video track
+j cycle video                           # switch video track
 T cycle ontop                           # toggle placing the video on top of other windows
 f cycle fullscreen                      # toggle fullscreen
 s screenshot                            # take a screenshot of the video in its original resolution with subtitles
