--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -2,6 +2,11 @@
 # video settings #
 ##################
 
+# Caching settings
+cache=yes
+demuxer-max-bytes=2048MiB
+demuxer-max-back-bytes=2048MiB
+
 # Start in fullscreen mode by default.
 #fs=yes
 
@@ -23,7 +28,7 @@ force-window=immediate
 #osc=no
 
 # Keep the player window on top of all other windows.
-#ontop=yes
+ontop=yes
 
 # Specify fast video rendering preset (for --vo=<gpu|gpu-next> only)
 # Recommended for mobile devices or older hardware with limited processing power
@@ -43,8 +48,10 @@ video-sync=display-resample
 # video outputs, but should work well with default settings on most systems.
 # If performance or energy usage is an issue, forcing the vdpau or vaapi VOs
 # may or may not help.
-#hwdec=auto
+hwdec=auto
 
+# Remember position after closing file
+save-position-on-quit=yes
 ##################
 # audio settings #
 ##################
