--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -48,7 +48,7 @@ video-sync=display-resample
 # video outputs, but should work well with default settings on most systems.
 # If performance or energy usage is an issue, forcing the vdpau or vaapi VOs
 # may or may not help.
-hwdec=auto
+#hwdec=auto-safe
 
 # Remember position after closing file
 save-position-on-quit=yes
