Added visualizer and changed input for mpv

--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -45,7 +45,7 @@ PGUP seek 600                           # seek 10 minutes forward
 PGDWN seek -600                         # seek 10 minutes backward
 KP_SUBTRACT multiply speed 1/1.1        # decrease the playback speed
 KP_ADD multiply speed 1.1               # increase the playback speed
-BS set speed 1.0                        # reset the speed to normal
+HOME set speed 1.0                      # reset the speed to normal
 q quit-watch-later                      # exit and remember the playback position
 ESC set fullscreen no                   # leave fullscreen
 SPACE cycle pause                       # toggle pause/playback mode
