--- a/.config/hypr/conf/programs.conf
+++ b/.config/hypr/conf/programs.conf
@@ -7,7 +7,7 @@
 # Set programs that you use
 $terminal = alacritty
 $fileManager = thunar
-$browser = firefox
+$browser = librewolf
 $menu = rofi -show drun -theme Arc-Dark -icon-theme "Papirus" -show-icons -terminal alacritty -font 'DejaVu Sans Mono 14'
 $game-menu = rofi -show drun -theme Arc-Dark -show combi -icon-theme "Papirus" -show-icons -terminal alacritty -font 'DejaVu Sans Mono 18' -drun-categories Game
 $vpn-menu = ~/.config/hypr/scripts/rofi-vpn
