--- a/.config/hypr/conf/monitor.conf
+++ b/.config/hypr/conf/monitor.conf
@@ -6,6 +6,7 @@
 monitor=desc:Samsung Electric Company Odyssey G80SD H1AK500000,3840x2160@120,0x0,1.5,vrr,0
 #monitor=desc:HP Inc. HP E243m 3CQ7372XT3,1920x1080@60,2560x-480,1,transform,3
 monitor=desc:HP Inc. HP E243m 3CQ7372XT3,1920x1080@60,2560x-100,1,transform,3
+monitor=desc:Seiko Epson Corporation EPSON PJ,1920x1080@60,auto,1,mirror,eDP-1
 
 monitor=,preferred,auto,1
 
