mpv yt-dlp settings

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -75,3 +75,5 @@ slang=en
 # Play Slovak audio if available, fall back to Czech and English otherwise.
 alang=sk,cz,en
 
+
+include=~/.config/yt-dlp.settings
