--- a/.config/newsboat/config
+++ b/.config/newsboat/config
@@ -1,11 +1,11 @@
 refresh-on-startup yes
 reload-threads 100
-browser "firefox %u"
+browser "librewolf %u"
 
 bind-key SPACE macro-prefix 
 bind-key ESC quit
 bind-key p toggle-article-read
-macro v set browser "mpv %u" ; open-in-browser ; set browser "firefox %u"
+macro v set browser "mpv %u" ; open-in-browser ; set browser "librewolf %u"
 
 # col # item              # fg      # bg
 color background          cyan     default        # the most bottom bar
