--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -15,21 +15,37 @@
     ],
     "modules-right": [
         "idle_inhibitor",
+	"custom/separator",
 	"custom/updates",
+	"custom/separator",
         "pulseaudio",
+	"custom/separator",
         "network",
+	"custom/separator",
         "power-profiles-daemon",
+	"custom/separator",
         "cpu",
+	"custom/separator",
         "memory",
+	"custom/separator",
 	"disk",
+	"custom/separator",
         "backlight",
+	"custom/separator",
         // "keyboard-state",
         "battery",
+	"custom/separator",
         "clock",
         "tray",
         "custom/power"
     ],
-	"custom/logo": {
+
+	"custom/separator": {
+    		"format": " | ",
+		"tooltip": false
+    	},
+
+    	"custom/logo": {
         	"format": "  ",
         	"tooltip": false,
         	"on-click": "rofi -show drun -theme Arc-Dark -show drun -icon-theme 'Papirus' -show-icons -terminal alacritty -font 'DejaVu Sans Mono 14' &"
@@ -56,7 +72,7 @@
 	}, 
 
 	"idle_inhibitor": {
-        	"format": " {icon} | ",
+        	"format": " {icon}",
 		"tooltip": false,
         	"format-icons": {
             		"activated": "",
@@ -65,7 +81,7 @@
     	},
 
 	"custom/updates": {
-    		"format": "📦{}| ",
+    		"format": "📦{}",
     		"escape": true,
     		"exec": "~/.config/waybar/scripts/updates",
 		"tooltip": false,
@@ -75,11 +91,11 @@
 
 	"pulseaudio": {
         	// "scroll-step": 1, // %, can be a float
-        	"format": "{icon} {volume}% | ",
+        	"format": "{icon} {volume}%",
         	//"format": "{volume}% {icon} {format_source}",
-        	"format-bluetooth": "{volume}% {icon}  | ",
-        	"format-bluetooth-muted": "🔇 {icon} | ",
-        	"format-muted": "🔇 | ",
+        	"format-bluetooth": "{volume}% {icon} ",
+        	"format-bluetooth-muted": "🔇 {icon}",
+        	"format-muted": "🔇",
         	"format-source": "{volume}% ",
         	"format-source-muted": "",
         	"format-icons": {
@@ -92,27 +108,27 @@
 	"network": {
         	// "interface": "wlp2*", // (Optional) To force the use of this interface
         	// "format-wifi": "🛜 {essid} ({signalStrength}%) | ",
-        	"format-wifi": "🛜 {essid} ({ipaddr}) | ",
-        	"format-ethernet": "🌍 {ipaddr} | ",
+        	"format-wifi": "🛜 {essid} ({ipaddr})",
+        	"format-ethernet": "🌍 {ipaddr}",
         	"tooltip": false,
-        	"format-linked": " {ifname} (No IP) | ",
-        	"format-disconnected": "⚠️ Disconnected | "
+        	"format-linked": " {ifname} (No IP)",
+        	"format-disconnected": "⚠️ Disconnected"
     	},
 
 	"cpu": {
-        	"format": "⚙️ {usage}% | ",
+        	"format": "⚙️ {usage}%",
         	"tooltip": false,
 		"interval": 2
     	},
 
 	"memory": {
-        	"format": "🎟 {}% | ",
+        	"format": "🎟 {}%",
 		"interval": 10
     	},
 
 	"disk": {
     		"interval": 60,
-    		"format": "💾 {percentage_used}% | ",
+    		"format": "💾 {percentage_used}%",
 		"path": "/"
 	},
 
@@ -140,7 +156,7 @@
 
 	"backlight": {
         	// "device": "acpi_video1",
-        	"format": "{icon} {percent}% | ",
+        	"format": "{icon} {percent}%",
 		"tooltip": false,
         	"format-icons": ["", "", "", "", "", "", "", "", ""]
     	},
@@ -151,11 +167,11 @@
             		"warning": 30,
             		"critical": 15
         	},
-        	"format": "{icon} {capacity}% | ",
-        	"format-full": "✅{capacity}% |",
-        	"format-charging": "🔌 {capacity}% |",
-        	"format-plugged": "✅ {capacity}% |",
-        	"format-alt": " {icon} {time} |",
+        	"format": "{icon} {capacity}%",
+        	"format-full": "✅{capacity}%",
+        	"format-charging": "🔌 {capacity}%",
+        	"format-plugged": "✅ {capacity}%",
+        	"format-alt": "{icon} {time}",
         	// "format-good": "", // An empty format will hide the module
         	// "format-full": "",
         	"format-icons": ["🪫", "🪫", "🔋", "🔋", "🔋"]
@@ -172,7 +188,7 @@
     },
 
 	"power-profiles-daemon": {
-      		"format": "{icon} | ",
+      		"format": "{icon}",
       		"tooltip-format": "Power profile: {profile}\nDriver: {driver}",
       		"tooltip": true,
       		"format-icons": {
@@ -188,7 +204,7 @@
         	// "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
         	"critical-threshold": 80,
         	// "format-critical": "{temperatureC}°C {icon}",
-        	"format": "{temperatureC}°C {icon} |",
+        	"format": "{temperatureC}°C {icon}",
         	"format-icons": ["🌡️", "🌡️", "🌡️"]
     	}
 
