added hyprsunset to hyprland config

--- a/.config/hypr/conf/keybinds.conf
+++ b/.config/hypr/conf/keybinds.conf
@@ -6,8 +6,8 @@
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = CTRL_ALT, T, exec, $terminal
-bind = CTRL_ALT, B, exec, $browser
+bind = CTRL ALT, T, exec, $terminal
+bind = CTRL ALT, B, exec, $browser
 bind = $mainMod SHIFT, C, killactive,
 bind = $mainMod SHIFT, Q, exit,
 bind = CTRL ALT, F, exec, $fileManager
@@ -79,3 +79,6 @@ bindl = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 
 bindl = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
 bindl = , XF86MonBrightnessUp, exec, brightnessctl set +5%
+
+bind = CTRL ALT, up, exec, hyprsunset -t 4500
+bind = CTRL ALT, down, exec, pkill -9 hyprsunset
