changed audio keybinds in hyprland

--- a/.config/hypr/conf/keybinds.conf
+++ b/.config/hypr/conf/keybinds.conf
@@ -67,12 +67,12 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Multimedia keys for volume
-bind = $mainMod, code:68, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bind = $mainMod, code:69, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
+bindel = $mainMod, code:68, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindel = $mainMod, code:69, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
 bind = $mainMod, code:67, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bind = $mainMod, code:70, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 
-bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
 bindel = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindl = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindl = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
