--- a/.config/hypr/conf/winworrules.conf
+++ b/.config/hypr/conf/winworrules.conf
@@ -22,3 +22,5 @@ windowrulev2 = noblur, class:^(xwaylandvideobridge)$
 
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+workspace = 10, monitor:desc:HP Inc. HP E243m 3CQ7372XT3, default:true
