changed input settings for hyprland

--- a/.config/hypr/conf/input.conf
+++ b/.config/hypr/conf/input.conf
@@ -14,7 +14,6 @@ kb_layout = sk
 
     accel_profile = flat
     sensitivity = 0.2 # -1.0 - 1.0, 0 means no modification.
-
     touchpad {
         natural_scroll = false
     }
@@ -22,7 +21,7 @@ kb_layout = sk
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+    workspace_swipe = true
 }
 
 # Example per-device config
@@ -35,3 +34,8 @@ device {
     name = Touchpad
     sensitivity = -1
 }
+device {
+    name = logitech-g502-x
+    sensitivity = -0.5
+}
+
