--- a/.config/hypr/conf/input.conf
+++ b/.config/hypr/conf/input.conf
@@ -38,4 +38,8 @@ device {
     name = logitech-g502-x
     sensitivity = -0.4
 }
+device {
+    name = logitech-usb-optical-mouse
+    sensitivity = -0.4
+}
 
