--- a/.config/newsboat/config
+++ b/.config/newsboat/config
@@ -10,7 +10,7 @@ bind-key d pb-download
 bind-key c pb-cancel
 bind-key v pb-play
 
-macro v set browser "mpv %u" ; open-in-browser ; set browser "librewolf %u"
+macro v set browser "mpv %u > /dev/null &" ; open-in-browser ; set browser "librewolf %u &"
 
 # col # item              # fg      # bg
 color background          cyan     default        # the most bottom bar
@@ -23,6 +23,8 @@ color article             white    default        # content of an article
 
 # Podboat
 podcast-auto-enqueue no
-download-path "~/Hudba/Podcast/%n"
+download-filename-format "%n/%F - %t.%e"
+download-path "~/Hudba/Podcast/"
+podlist-format "%4i [%6dMB/%6tMB] [%5p %%] [%12K] %-20S %F"
 max-downloads 5
-player mpv
+player "mpv"
