changed input for mpv to QWERTZ

--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -53,6 +53,8 @@ i script-binding stats/display-stats-toggle # toggle displaying information and 
 ; script-binding console/enable         # open the console
 Shift+g add sub-scale +0.1              # increase the subtitle font size
 Shift+f add sub-scale -0.1              # decrease the subtitle font size
+y add sub-delay -0.1
+z ignore
 m cycle mute                            # toggle mute
 v cycle sub                             # switch subtitle track
 V cycle sub down                        # switch subtitle track backwards
