changed binds for newsboat

--- a/.config/newsboat/config
+++ b/.config/newsboat/config
@@ -5,6 +5,8 @@ browser "librewolf %u"
 bind-key SPACE macro-prefix 
 bind-key ESC quit
 bind-key p toggle-article-read
+bind-key C mark-feed-read
+bind-key A mark-all-feeds-read
 
 bind-key d pb-download
 bind-key c pb-cancel
