--- a/.config/hypr/conf/programs.conf
+++ b/.config/hypr/conf/programs.conf
@@ -14,4 +14,4 @@ $vpn-menu = ~/.config/hypr/scripts/rofi-vpn
 $power-menu = ~/.config/hypr/scripts/rofi-power
 $shutdown-menu = ~/.config/waybar/scripts/rofi-shutdown
 #$screenshot = XDG_CURRENT_DESKTOP=Sway flameshot gui -p ~/Obrázky/'Snímky obrazovky'
-$screenshot = ~/.config/hypr/scripts/grimblast --cursor --freeze copysave area ~/Obrázky/'Snímky obrazovky'/$(date -u +%Y-%m-%d_%H-%M-%S).png
+$screenshot = ~/.config/hypr/scripts/screenshots
