added custom keyboard layout

--- a/.config/hypr/conf/input.conf
+++ b/.config/hypr/conf/input.conf
@@ -4,7 +4,7 @@
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-kb_layout = sk
+kb_layout = sk-numbers
     kb_variant =
     kb_model =
     kb_options =
