--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -3,11 +3,11 @@ color_scheme_path=/usr/share/qt5ct/colors/darker.conf
 custom_palette=true
 icon_theme=Papirus-Dark
 standard_dialogs=default
-style=Breeze
+style=kvantum-dark
 
 [Fonts]
-fixed="DejaVu LGC Sans,12,-1,5,50,0,0,0,0,0"
-general="DejaVu LGC Sans,12,-1,5,50,0,0,0,0,0"
+fixed="Adwaita Sans,11,-1,5,50,0,0,0,0,0,Regular"
+general="Adwaita Sans,11,-1,5,50,0,0,0,0,0,Regular"
 
 [Interface]
 activate_item_on_single_click=1
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\as\0\0\x4\x13\0\0\0\0\0\0\0\0\0\0\a\x7f\0\0\x4\x37\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\as\0\0\x4\x13)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x3\xc6\0\0\0\x1e\0\0\ay\0\0\x4\x31\0\0\x3\xc6\0\0\0\x1e\0\0\ay\0\0\x4\x31\0\0\0\0\0\0\0\0\a\x80\0\0\x3\xc6\0\0\0\x1e\0\0\ay\0\0\x4\x31)
 
 [Troubleshooting]
 force_raster_widgets=1
