Enabled HDR in hyprland

--- a/.config/hypr/conf/monitor.conf
+++ b/.config/hypr/conf/monitor.conf
@@ -3,7 +3,7 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=desc:Samsung Electric Company Odyssey G80SD H1AK500000,3840x2160@120,0x0,1.5,vrr,0
+monitor=desc:Samsung Electric Company Odyssey G80SD H1AK500000,3840x2160@120,0x0,1.5,vrr,0,bitdepth,10,cm,hdr,sdrbrightness,1,sdrsaturation,1.5
 #monitor=desc:HP Inc. HP E243m 3CQ7372XT3,1920x1080@60,2560x-480,1,transform,3
 monitor=desc:HP Inc. HP E243m 3CQ7372XT3,1920x1080@60,2560x-100,1,transform,3
 
