added chapter seeking bind to mpv

--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -78,3 +78,6 @@ PREV playlist-prev                      # skip to the previous file
 VOLUME_UP add volume 2
 VOLUME_DOWN add volume -2
 MUTE cycle mute                         # toggle mute
+
+ä add chapter 1                         # seek to the next chapter
+ú add chapter -1                        # seek to the previous chapter
