Changed terminal emulator to kitty

--- a/.config/hypr/conf/programs.conf
+++ b/.config/hypr/conf/programs.conf
@@ -5,7 +5,7 @@
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = alacritty
+$terminal = kitty --title Kitty
 $fileManager = thunar
 $browser = librewolf
 $menu = rofi -show drun -theme Arc-Dark -icon-theme "Papirus" -show-icons -terminal alacritty -font 'DejaVu Sans Mono 14'
