--- a/.config/kitty/themes/enfocado_dark.conf
+++ b/.config/kitty/themes/enfocado_dark.conf
@@ -4,8 +4,8 @@
 # Default colors
 background              #181818
 foreground              #b9b9b9
-selection_background    #3b3b3b
-selection_foreground    #b9b9b9
+selection_background    #b9b9b9
+selection_foreground    #181818
 cursor                  #b9b9b9
 cursor_text_color       #181818
 
