--- a/.config/kitty/conf/cursor.conf
+++ b/.config/kitty/conf/cursor.conf
@@ -19,7 +19,7 @@ cursor_text_color #111111
 #: so if you want to override it, place your value after the lines
 #: where the theme file is included.
 
-cursor_shape block
+cursor_shape beam
 
 #: The cursor shape can be one of block, beam, underline. Note that
 #: when reloading the config this will be changed only if the cursor
