Fixes to hyprland configs

--- a/.config/hypr/conf/autostart.conf
+++ b/.config/hypr/conf/autostart.conf
@@ -5,16 +5,11 @@
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = ~/.config/waybar/launch-waybar.sh 
-# exec-once = hyprpaper
 exec-once = waypaper --restore
-exec-once= dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once= hyprctl setcursor elementary 24
-#exec-once = ~/.config/hypr/gtk.sh
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = hyprctl setcursor no-name 24 # this is temporary fix, to bypass hyprcursor by setting cursor name to non-existing cursor
 exec-once = dunst
 exec-once = blueman-applet
 exec-once = nm-applet
