--- a/.config/hypr/conf/environment.conf
+++ b/.config/hypr/conf/environment.conf
@@ -4,8 +4,10 @@
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
+env = XCURSOR_THEME,elementary
 env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+#env = HYPRCURSOR_THEME,elementary
+#env = HYPRCURSOR_SIZE,24
 
 # NVIDIA
 
@@ -14,6 +16,7 @@ env = HYPRCURSOR_SIZE,24
 # env = GBM_BACKEND,nvidia-drm
 # env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
- cursor {
-     no_hardware_cursors = true
+cursor {
+     no_hardware_cursors = 2
+     enable_hyprcursor = false
 }
