--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -77,3 +77,9 @@ alang=sk,cz,en
 
 
 include=~/.config/yt-dlp.settings
+
+# Force SDR output
+video-output-levels=full
+target-trc=srgb
+target-prim=bt.709
+
