--- a/.config/hypr/conf/autostart.conf
+++ b/.config/hypr/conf/autostart.conf
@@ -9,7 +9,7 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = ~/.config/waybar/launch-waybar.sh 
 exec-once = waypaper --restore
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = hyprctl setcursor no-name 24 # this is temporary fix, to bypass hyprcursor by setting cursor name to non-existing cursor
+exec-once = hyprctl setcursor elementary_hyprcursor 24
 exec-once = dunst
 exec-once = blueman-applet
 exec-once = nm-applet
