--- a/.config/hypr/conf/environment.conf
+++ b/.config/hypr/conf/environment.conf
@@ -6,8 +6,8 @@
 
 env = XCURSOR_THEME,elementary
 env = XCURSOR_SIZE,24
-#env = HYPRCURSOR_THEME,elementary
-#env = HYPRCURSOR_SIZE,24
+env = HYPRCURSOR_THEME,elementary_hyprcursor
+env = HYPRCURSOR_SIZE,24
 
 # NVIDIA
 
@@ -18,5 +18,5 @@ env = XCURSOR_SIZE,24
 
 cursor {
      no_hardware_cursors = 2
-     enable_hyprcursor = false
+     enable_hyprcursor = true
 }
